<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
	</parent>
	<groupId>es.cesguiro</groupId>
	<artifactId>dws-spring</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>${project.groupId}.${project.artifactId}</name>
	<description>Demo project for Spring Boot</description>
	<url>http://github.com/cesguiro/${project.artifactId}</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>César Guijarro</name>
			<id>C.Guijarro</id>
			<email>c.guijarrorosaleny@edu.gva.es</email>
			<url>https://cesguiro.es</url>
			<organization>CIPFP Mislata</organization>
			<roles>
				<role>Architect</role>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<encoding>UTF-8</encoding>
		<java.version>21</java.version>
	</properties>

	<modules>
		<module>dws-injection</module>
        <module>dws-functional</module>
        <module>dws-layers</module>
        <module>dws-presentation</module>
        <module>dws-hateoas</module>
        <module>dws-domain</module>
    </modules>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<!-- TEST -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
